After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778073 - hls: m3u8: Fix leak on _master_playlist_unref()
hls: m3u8: Fix leak on _master_playlist_unref()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-02 12:11 UTC by Seungha Yang
Modified: 2017-03-02 18:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tests: hls: Fix leak on test code (1.86 KB, patch)
2017-02-02 12:12 UTC, Seungha Yang
committed Details | Review
hls: m3u8: Fix leak on _master_playlist_unref() (917 bytes, patch)
2017-02-02 12:12 UTC, Seungha Yang
none Details | Review
hls: Fix various leak on hlsdemux and m3u8 (1.73 KB, patch)
2017-02-02 12:30 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2017-02-02 12:11:35 UTC
default_variant should be freed, it holds ref.
Comment 1 Seungha Yang 2017-02-02 12:12:36 UTC
Created attachment 344768 [details] [review]
tests: hls: Fix leak on test code
Comment 2 Seungha Yang 2017-02-02 12:12:57 UTC
Created attachment 344769 [details] [review]
hls: m3u8: Fix leak on _master_playlist_unref()
Comment 3 Seungha Yang 2017-02-02 12:30:30 UTC
Created attachment 344770 [details] [review]
hls: Fix various leak on hlsdemux and m3u8

* default_variant should be freed, it holds ref.
* GstHLSMedia holds GstM3U8 ref.
* gst_m3u8_get_next_fragment() increases ref count.
Comment 4 Sebastian Dröge (slomo) 2017-03-02 18:24:27 UTC
Attachment 344768 [details] pushed as e28ddbd - tests: hls: Fix leak on test code
Attachment 344770 [details] pushed as 5bd4bc8 - hls: Fix various leak on hlsdemux and m3u8